syntax = "proto3";

package api.todo;

import "todo.types.proto";

service BoardService {
    rpc AddBoard (AddBoardReq) returns (TaskStatusRes) {
    }

    rpc UpdateBoard (Board) returns (TaskStatusRes) {
    }

    rpc DeleteBoard (BoardReq) returns (TaskStatusRes) {
    }
    
    rpc GetBoard (BoardReq) returns (Board) {
    }
    
    rpc GetUserBoards (TodoStub) returns (BoardsRes) {
    }
    
    rpc GetUserBoardsWithStatuses (TodoStub) returns (BoardsRes) {
    }
}

message AddBoardReq {
    string title = 1;
    repeated string members = 2;
}

message BoardReq {
    string id = 1;
}

message BoardsRes {
    repeated Board boards = 1;
}
